# Polynomial-Evaluation-Accelerator

./: CMakeLists.txt  README.txt  makeme  project.txt  readme.txt  test2.txt  test3.txt
src/c/example/inner_product/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cleanme  cmake_install.cmake  compile_commands.json
src/c/example/inner_product/autotest-output/: test_output.txt  test_output.txt.bak
src/c/example/inner_product/src/: CMakeCache.txt  README.txt
src/c/example/inner_product/src/apps/jitter-measurement/: CMakeLists.txt  README.txt  lide_c_CRE.c  lide_c_CRE.h  lide_c_DVL.c  lide_c_DVL.h  lide_c_FSM_s.c  lide_c_FSM_s.h  lide_c_Phase.c  lide_c_Phase.h  lide_c_RE.c  lide_c_RE.h  lide_c_RRE.c  lide_c_RRE.h  lide_c_STR.c  lide_c_STR.h  lide_c_TRT.c  lide_c_TRT.h  lide_c_fifoext.c  lide_c_fifoext.h  lide_c_file_sink_jitter.c  lide_c_file_sink_jitter.h  lide_c_jitter_graph.c  lide_c_jitter_graph.h
src/c/example/inner_product/src/gems/: README.txt
src/c/example/inner_product/src/gems/actors/: README.txt
src/c/example/inner_product/src/gems/actors/basic/: CMakeLists.txt  Makefile  cmake_install.cmake  lide_c_add.h  lide_c_file_sink.c  lide_c_file_source.c  lide_c_file_source_double.c  lide_c_file_source_double.h  lide_c_inner_product.c  lide_c_inner_product.h  lide_c_table_lookup.c  lide_c_table_lookup.h  objtr_hist_gen.c  objtr_hist_gen.h
src/c/example/inner_product/src/gems/actors/common/: lide_c_basic.h
src/c/example/inner_product/src/gems/actors/communication/: README.txt
src/c/example/inner_product/src/gems/actors/communication/channel_estimation/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  lide_c_auto_correlation_computation.c  lide_c_auto_correlation_computation.h  lide_c_coefficient_computation.c  lide_c_coefficient_computation.h  lide_c_cross_correlation_computation.c  lide_c_cross_correlation_computation.h  lide_c_matrix_inversion.c  lide_c_matrix_inversion.h  lide_c_noise_adder.c  lide_c_noise_adder.h  lide_c_response_computation.c  lide_c_response_computation.h
src/c/example/inner_product/src/gems/actors/communication/common/: CMakeLists.txt  Makefile  cmake_install.cmake  lide_c_file_read.c  lide_c_file_read.h  lide_c_file_write.c  lide_c_file_write.h  makeme
src/c/example/inner_product/src/gems/actors/dsp/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  lide_c_multirate_fir.c  lide_c_multirate_fir.h
src/c/example/inner_product/src/gems/actors/hep/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  lide_c_cluster_computation.c  lide_c_cluster_computation.h  lide_c_cluster_isolation.c  lide_c_cluster_isolation.h  lide_c_cluster_threshold.c  lide_c_cluster_threshold.h  lide_c_cluster_weight.c  lide_c_cluster_weight.h  lide_c_jet_recon.c  lide_c_jet_recon.h  lide_c_overlap_filter.c  lide_c_overlap_filter.h  lide_c_particle_id.c  lide_c_particle_id.h
src/c/example/inner_product/src/gems/actors/imaging/: README.txt
src/c/example/inner_product/src/gems/actors/imaging/gaussian_filtering/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  lide_c_bmp.h  lide_c_bmp_file_read_halo.c  lide_c_bmp_file_read_halo.h  lide_c_bmp_file_write.c  lide_c_bmp_file_write.h  lide_c_file_source_fcv.c  lide_c_file_source_fcv.h  lide_c_gfilter.c  lide_c_gfilter.h  lide_c_invert.c  lide_c_invert.h  lide_c_t.c  lide_c_t.h
src/c/example/inner_product/src/gems/edges/: README.txt
src/c/example/inner_product/src/gems/edges/basic/: Makefile  README.txt  cmake_install.cmake  lide_c_fifo.h  lide_c_fifo_basic.c  lide_c_fifo_basic.h  lide_c_fifo_type_common.h
src/c/example/inner_product/src/gems/graph/: README.txt
src/c/example/inner_product/src/gems/graph/basic/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  lide_c_inner_product_graph.c  lide_c_inner_product_graph.h
src/c/example/inner_product/src/gems/graph/common/: README.txt  lide_c_graph.h  lide_c_graph_context_type_common.h
src/c/example/inner_product/src/tools/: README.txt
src/c/example/inner_product/src/tools/graph/: lide_c_graph_def.h
src/c/example/inner_product/src/tools/runtime/: Makefile  README.txt  cmake_install.cmake
src/c/example/inner_product/test_demo1/: diagnostics.txt  image.txt  test-desc.txt
src/c/example/inner_product/test_demo1/autotest-output/: test_output.txt
src/c/example/inner_product/test_demo2/: bins.txt  diagnostics.txt  image.txt  makeme  test-desc.txt
src/c/example/inner_product/test_demo2/autotest-output/: test_output.txt
src/c/example/inner_product/test_demo3/: README.txt  diagnostics.txt  runme  test_desc.txt
src/c/example/inner_product/util/: CMakeLists.txt  Makefile  cmake_install.cmake  dlcconfig  makeme  objtr_hist_gen_driver.c  objtr_hist_gen_driver1.c  runtest
src/verilog/designs/: NEXT_MODE_IN_FSM2_change.v  PEA_enable.v  PEA_enable.v~  PEA_top_module_1.v  PEA_top_module_1.v~  README.txt  dlvconfig  dlvconfig~  fifo_edited.v  firing_state_FSM_2.v  mem_controller_old.v  mem_controller_v2.v  read_from_FIFO.v  single_port_ram.v  temp2_firing_state_FSM2.v  temp_PEA_enable.v  temp_PEA_top_module_1.v  temp_firing_state_FSM_2.v  xvlog.pb
src/verilog/designs/design1/: get_command_FSM_3.v
src/verilog/designs/design2/: FSM_3_draft.v
src/verilog/designs/design_1/: EVB_FSM_3.v  EVP_FSM_3.v  Enable_PEA2.v  N_ram.v  README.txt  RST_FSM_3.v  STP_FSM_3.v  S_vector_ram.v  clk_hs_fdi.sv  dlvconfig  enable_PEA.v  fifo_edited.v  firing_state_FSM2.v  firing_state_FSM_2_v2.v  invoke_PEA.v  (+13 more)
src/verilog/lib/: DRC_drc_1.txt  PEA_top_module_1_utilization_synth.pb  PEA_top_module_1_utilization_synth.rpt  clock_utilization_report.txt  master.xdc  methodology_report.txt  power_1.rpx  power_opt  utilization_report.txt
test/test_verilog/: README.txt
test/test_verilog/autotest-output/: test_output.txt  test_summary.txt
test/test_verilog/test01/: dlvconfig  dlvconfig~  runme  simulate-do  testbench.v  testbench.v~
test/test_verilog/test_STP/: README.txt
test/test_verilog/test_mem_load/: README.txt
util/: CMakeLists.txt  Makefile  cmake_install.cmake  dlcconfig  lide_c_pea_driver.c  runtest
(+1122 files in other folders)
